deps/chakrashim/core/test/SIMD.int8x16/testConstructor.baseline
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
Constructor
>> Fail!
>> Fail!
a.1: 0
a.2: 0
a.3: 127
a.4: 126
a.5: 0
a.6: 0
a.7: 127
a.8: 126
a.9: 0
a.10: 0
a.11: 127
a.12: 126
a.13: 0
a.14: 0
a.15: 127
a.16: 126
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Correct
Type Error
